# giglgu

./: CMakeLists.txt  Doxyfile.in
base/: CMakeLists.txt
base/include/giglgu/base/: AddrInfo.h  AddrInfoLookup.h  AddrToString.h  CMakeLists.txt  Component.h  NameInfo.h  SocketAddr.h  SocketDscr.h  SocketError.h  WsaStartup.h
base/src/: AddrInfo.cpp  AddrInfoLookup.cpp  AddrToString.cpp  CMakeLists.txt  NameInfo.cpp  SocketAddr.cpp  SocketDscr.cpp  WsaStartup.cpp  config.h.cmake
base/test/: CMakeLists.txt  EchoServer.cpp  TestAddrInfo.cpp  TestDefine.cpp
hacking/: build-nmake.cmd  build.cmd  build.sh  setenv.cmd
logging/: CMakeLists.txt
logging/include/giglgu/logging/: BadNullStream.h  CMakeLists.txt  Component.h  CriticalSection.h  ForwardingSink.h  ForwardingStream.h  LogAssert.h  LogCondition.h  LogCondition.inc  LogConditionMap.h  LogFile.h  LogStream.h  ThreadLocalStorage.h
logging/src/: BadNullStream.cpp  CMakeLists.txt  ForwardingSink.cpp  LogCondition.cpp  LogConditionMap.cpp  LogFile.cpp  LogStream.cpp
logging/test/: CMakeLists.txt  TestForwarding.cpp  TestLogAssert.cpp  TestLogCondition.cpp  TestLogFile.cpp
plaintext/: CMakeLists.txt
plaintext/include/giglgu/plaintext/: BitName.h  CMakeLists.txt  Component.h  KeyFileReader.h  ReplaceFileNameMacros.h  hexdump.h
plaintext/src/: CMakeLists.txt  KeyFileReader.cpp  ReplaceFileNameMacros.cpp  hexdump.cpp  private.h.cmake
posix/: CMakeLists.txt
posix/include/giglgu/posix/: AddrInfoError.h  Atomic.h  CMakeLists.txt  Component.h  Cond.h  CondAttr.h  CriticalSection.h  DynamicLoader.h  DynamicLoaderError.h  ErrnoError.h  Mutex.h  MutexAttr.h  Thread.h  ThreadAttr.h  ThreadLocalStorage.h
posix/src/: AddrInfoError.cpp  CMakeLists.txt  Component.cpp  Cond.cpp  CondAttr.cpp  CriticalSection.cpp  DynamicLoader.cpp  DynamicLoaderError.cpp  ErrnoError.cpp  Mutex.cpp  MutexAttr.cpp  Thread.cpp  ThreadAttr.cpp  ThreadLocalStorage.cpp  config.h.cmake  private.h.cmake
posix/test/: CMakeLists.txt  TestCondVar.cpp  TestDynamicLoader.cpp  TestMutex.cpp  TestThreadAttr.cpp
share/: propset.sh
windows/: CMakeLists.txt
windows/include/giglgu/windows/: Atomic.h  CMakeLists.txt  Component.h  CriticalSection.h  DynamicLoader.h  Thread.h  ThreadLocalStorage.h  WinError.h  WsaError.h
windows/src/: CMakeLists.txt  Component.cpp  CriticalSection.cpp  DynamicLoader.cpp  Thread.cpp  ThreadLocalStorage.cpp  WinError.cpp  WsaError.cpp  config.h.cmake  private.h.cmake
windows/test/: CMakeLists.txt  TestCriticalSection.cpp  TestDynamicLoader.cpp  TestWinError.cpp
