#
# $Id: CMakeLists.txt 292 2012-06-16 13:03:03Z alba $
#
# Copyright 2012 Alexander Bartolich
#
# This program is free software; you can redistribute it and/or modify
# it under the terms of the GNU General Public License as published by
# the Free Software Foundation; either version 3 of the License, or
# (at your option) any later version.

install(
  FILES
  BitName.h
  Component.h
  hexdump.h
  KeyFileReader.h
  ReplaceFileNameMacros.h
  DESTINATION include/giglgu/text
)
